--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,7 +41,13 @@ dependencies:
   google_fonts: ^6.2.1
   
   # Date and time formatting
-  intl: ^0.19.0
+  intl: ^0.20.2
+  
+  # State management for localization
+  provider: ^6.1.1
+  
+  # Local storage for language preference
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lang/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
